dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/joyd/daemon.c)

dnl Most of these things are boiler plate (from autoscan);
dnl but here's some of my stuff
dnl BEGIN BLOCK OF MY STUFF

dnl AC_CONFIG_SUBDIRS(doc examples src src/joyd src/joyread)

dnl END BLOCK OF MY STUFF

dnl Checks for programs.
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h syslog.h unistd.h)
AC_CHECK_HEADER(linux/joystick.h, , AC_MSG_ERROR([Is the Linux Joystick Driver installed properly?]))

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL

AC_OUTPUT(src/joyread/Makefile src/joyd/Makefile doc/Makefile examples/Makefile src/Makefile Makefile)
